# pre-commit

./: .pre-commit-config.yaml  README.MD  main.py  pyproject.toml
