[tool.poetry]
name = "black-teste"
version = "0.1.0"
description = ""
authors = ["bruno"]
readme = "README.md"
packages = [{include = "black_teste"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
